[gd_scene load_steps=21 format=3 uid="uid://bioqi1tyrmj1a"]

[ext_resource type="Script" path="res://Escenas/inicio.gd" id="1_cqrg6"]
[ext_resource type="Texture2D" uid="uid://duc3wr70ie3k3" path="res://assets/boton.png" id="3_0qp4j"]
[ext_resource type="Texture2D" uid="uid://cu83o0mqk31cr" path="res://assets/burbuja.png" id="3_djfn5"]
[ext_resource type="Texture2D" uid="uid://dmajyfckuowlt" path="res://assets/burbuja borde y detalles.png" id="5_y7hqj"]
[ext_resource type="Texture2D" uid="uid://dywirkat8qcoi" path="res://assets/burbuja brillo.png" id="6_btpb2"]
[ext_resource type="Texture2D" uid="uid://jlx3gtwiyxwq" path="res://assets/burbuja dorada borde2.png" id="7_8cw3f"]
[ext_resource type="Texture2D" uid="uid://bkbcnbrgplq6d" path="res://assets/logo.png" id="7_x0thh"]
[ext_resource type="Script" path="res://Escenas/audio_manager.gd" id="8_kiret"]
[ext_resource type="AudioStream" uid="uid://d31kvvomt6ir5" path="res://SOUNDS ESCARABUJA/THEMES/ESCARABUJA_MENU_THEME.mp3" id="8_sb3rd"]
[ext_resource type="Texture2D" uid="uid://lhdfswikr5av" path="res://assets/instrucciones.png" id="10_hjbjl"]

[sub_resource type="Animation" id="Animation_h60v3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_menu/TextureRect4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(374, 23)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("main_menu/TextureRect3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(109, 410)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("main_menu/TextureRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(119, 150)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("main_menu/TextureRect5:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(265, 368)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("main_menu/TextureRect8:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(370, 536)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("main_menu/TextureRect6:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(722, 240)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("main_menu/TextureRect2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(842, 178)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("main_menu/TextureRect7:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(816, 495)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("main_menu/TextureRect9:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1006, 466)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("main_menu/Button:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("main_menu/botonInstrucciones:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_i0dpa"]
resource_name = "flotarArriba"
length = 2.0
loop_mode = 1
step = 0.0123
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_menu/TextureRect4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(374, 23), Vector2(374, 32), Vector2(374, 23)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("main_menu/TextureRect3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(109, 410), Vector2(109, 406), Vector2(109, 410)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("main_menu/TextureRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.233333, 1.1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(119, 150), Vector2(119, 133), Vector2(119, 150), Vector2(119, 140)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("main_menu/TextureRect5:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.666667, 1.86667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(265, 368), Vector2(265, 375), Vector2(265, 368)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("main_menu/TextureRect8:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4, 0.966667, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(370, 536), Vector2(370, 531), Vector2(370, 535), Vector2(370, 536)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("main_menu/TextureRect6:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.366667, 1.23333, 1.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(722, 240), Vector2(722, 251), Vector2(722, 240)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("main_menu/TextureRect2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.566667, 1.2, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(842, 178), Vector2(842, 186), Vector2(842, 159), Vector2(842, 178)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("main_menu/TextureRect7:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1.53333, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(816, 495), Vector2(816, 456), Vector2(816, 495)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("main_menu/TextureRect9:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.633333, 1.03333, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1006, 466), Vector2(1006, 458), Vector2(1006, 442), Vector2(1006, 466)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("main_menu/Button:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.759169, 1.33639),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.10472, -0.10472]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("main_menu/botonInstrucciones:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.40188, 0.862215, 1.51984, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.0715585, 0.0246696, 0.0610865, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r3axs"]
_data = {
"RESET": SubResource("Animation_h60v3"),
"flotarArriba": SubResource("Animation_i0dpa")
}

[sub_resource type="LabelSettings" id="LabelSettings_ed5v4"]
line_spacing = 5.0
font_size = 27
font_color = Color(0.956788, 0.978402, 0.984509, 1)
outline_size = 8
outline_color = Color(0.370094, 0.449397, 0.892412, 1)
shadow_color = Color(0.36021, 0.433849, 0.886552, 1)
shadow_offset = Vector2(-3, 2)

[sub_resource type="LabelSettings" id="LabelSettings_3dyhm"]
font_size = 38
shadow_size = 5
shadow_color = Color(0.270588, 0.32549, 0.662745, 1)
shadow_offset = Vector2(3, 2)

[sub_resource type="LabelSettings" id="LabelSettings_3dku2"]
font_color = Color(0.954848, 0.887138, 0.918845, 1)
outline_size = 3
outline_color = Color(0.368627, 0.45098, 0.894118, 1)
shadow_size = 3
shadow_color = Color(0.188235, 0.227451, 0.6, 1)
shadow_offset = Vector2(-3, 1)

[sub_resource type="LabelSettings" id="LabelSettings_soalm"]
font_size = 20
font_color = Color(0.952941, 0.886275, 0.917647, 1)
outline_size = 3
outline_color = Color(0.368627, 0.45098, 0.894118, 1)
shadow_size = 3
shadow_color = Color(0.188539, 0.225854, 0.598195, 1)
shadow_offset = Vector2(-3, 2)

[sub_resource type="LabelSettings" id="LabelSettings_tqqwh"]
shadow_size = 18
shadow_color = Color(0.188235, 0.227451, 0.6, 1)

[sub_resource type="LabelSettings" id="LabelSettings_av3o4"]
font_size = 22
outline_color = Color(0.368627, 0.45098, 0.894118, 1)
shadow_size = 18
shadow_color = Color(0.188235, 0.227451, 0.6, 1)
shadow_offset = Vector2(-3, 2)

[sub_resource type="LabelSettings" id="LabelSettings_1tbgr"]
line_spacing = 5.0
font_size = 20
outline_size = 5
outline_color = Color(0.227327, 0.280394, 0.704843, 1)
shadow_color = Color(0.154675, 0.19272, 0.523142, 1)
shadow_offset = Vector2(-3, 2)

[node name="Inicio" type="Node2D" groups=["Persist"]]
script = ExtResource("1_cqrg6")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_sb3rd")

[node name="main_menu" type="Node2D" parent="."]

[node name="Ilustracion" type="TextureRect" parent="main_menu"]
light_mask = 2
visibility_layer = 2
z_index = -3
offset_left = 1.0
offset_top = 1.0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("3_djfn5")

[node name="ColorRect" type="ColorRect" parent="main_menu"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.929412, 0.647059, 0.760784, 1)

[node name="TextureRect" type="TextureRect" parent="main_menu"]
modulate = Color(1, 1, 1, 0.964706)
texture_filter = 1
offset_left = 119.0
offset_top = 150.0
offset_right = 279.0
offset_bottom = 310.0
texture = ExtResource("5_y7hqj")

[node name="TextureRect2" type="TextureRect" parent="main_menu"]
texture_filter = 1
offset_left = 842.0
offset_top = 178.0
offset_right = 1042.0
offset_bottom = 378.0
rotation = -0.0150857
texture = ExtResource("5_y7hqj")

[node name="TextureRect3" type="TextureRect" parent="main_menu"]
texture_filter = 1
offset_left = 109.0
offset_top = 410.0
offset_right = 209.0
offset_bottom = 510.0
rotation = 0.0157086
texture = ExtResource("3_djfn5")

[node name="TextureRect4" type="TextureRect" parent="main_menu"]
z_index = 1
texture_filter = 1
offset_left = 374.0
offset_top = 23.0
offset_right = 674.0
offset_bottom = 323.0
rotation = 6.28319
texture = ExtResource("5_y7hqj")
flip_v = true

[node name="TextureRect5" type="TextureRect" parent="main_menu"]
texture_filter = 1
offset_left = 265.0
offset_top = 368.0
offset_right = 315.0
offset_bottom = 418.0
texture = ExtResource("6_btpb2")

[node name="TextureRect6" type="TextureRect" parent="main_menu"]
z_index = 2
texture_filter = 1
offset_left = 722.0
offset_top = 240.0
offset_right = 772.0
offset_bottom = 290.0
texture = ExtResource("6_btpb2")

[node name="TextureRect7" type="TextureRect" parent="main_menu"]
texture_filter = 1
offset_left = 816.0
offset_top = 495.0
offset_right = 866.0
offset_bottom = 545.0
texture = ExtResource("6_btpb2")

[node name="TextureRect8" type="TextureRect" parent="main_menu"]
texture_filter = 1
offset_left = 370.0
offset_top = 536.0
offset_right = 420.0
offset_bottom = 586.0
texture = ExtResource("6_btpb2")

[node name="TextureRect9" type="TextureRect" parent="main_menu"]
texture_filter = 1
offset_left = 1006.0
offset_top = 466.0
offset_right = 1086.0
offset_bottom = 546.0
texture = ExtResource("7_8cw3f")

[node name="Flotar" type="AnimationPlayer" parent="main_menu"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_r3axs")
}
autoplay = "flotarArriba"

[node name="Logo" type="Sprite2D" parent="main_menu"]
texture_filter = 1
position = Vector2(560, 328)
scale = Vector2(4.95, 6.35)
texture = ExtResource("7_x0thh")

[node name="botonInstrucciones" type="TextureButton" parent="main_menu"]
z_index = 6
texture_filter = 1
offset_left = 416.0
offset_top = 480.0
offset_right = 709.0
offset_bottom = 602.0
pivot_offset = Vector2(144, 59)
texture_normal = ExtResource("3_0qp4j")
stretch_mode = 0

[node name="Instrucciones" type="Label" parent="main_menu/botonInstrucciones"]
layout_mode = 0
offset_left = 39.0
offset_top = 40.0
offset_right = 251.0
offset_bottom = 82.0
text = "INSTRUCCIONES"
label_settings = SubResource("LabelSettings_ed5v4")
horizontal_alignment = 1

[node name="Button" type="TextureButton" parent="main_menu"]
z_index = 6
texture_filter = 1
offset_left = 416.0
offset_top = 384.0
offset_right = 704.0
offset_bottom = 506.0
pivot_offset = Vector2(139, 61)
texture_normal = ExtResource("3_0qp4j")
stretch_mode = 0

[node name="Label" type="Label" parent="main_menu/Button"]
layout_mode = 0
offset_left = 88.0
offset_top = 40.0
offset_right = 204.0
offset_bottom = 82.0
text = "JUGAR"
label_settings = SubResource("LabelSettings_ed5v4")
horizontal_alignment = 1

[node name="audio_manager" type="Node2D" parent="main_menu"]
script = ExtResource("8_kiret")

[node name="HSlider" type="HSlider" parent="main_menu/audio_manager"]
offset_left = 891.0
offset_top = 582.0
offset_right = 1101.0
offset_bottom = 604.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="volumen_txt" type="Label" parent="main_menu/audio_manager/HSlider"]
layout_mode = 0
offset_left = 2.0
offset_top = -39.0
offset_right = 273.0
offset_bottom = 3.0
text = "VOLUMEN"
label_settings = SubResource("LabelSettings_ed5v4")

[node name="instrucciones" type="Node2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="instrucciones"]
z_index = 7
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.0352941)

[node name="Instrucciones" type="Sprite2D" parent="instrucciones/ColorRect2"]
visible = false
z_index = -1
position = Vector2(575.469, 324)
scale = Vector2(0.762103, 0.799451)
texture = ExtResource("10_hjbjl")

[node name="Label10" type="Label" parent="instrucciones/ColorRect2/Instrucciones"]
offset_left = -251.238
offset_top = -405.278
offset_right = 251.762
offset_bottom = -352.278
text = "Cómo jugar a ¡Escarabuja!"
label_settings = SubResource("LabelSettings_3dyhm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label9" type="Label" parent="instrucciones/ColorRect2/Instrucciones"]
offset_left = -595.023
offset_top = 196.385
offset_right = -363.023
offset_bottom = 227.385
text = "CONTROLES DE MOVIMIENTO:"
label_settings = SubResource("LabelSettings_3dku2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="izq" type="Label" parent="instrucciones/ColorRect2/Instrucciones"]
offset_left = -618.642
offset_top = 305.209
offset_right = -512.642
offset_bottom = 336.209
text = "IZQUIERDA"
label_settings = SubResource("LabelSettings_3dku2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="der" type="Label" parent="instrucciones/ColorRect2/Instrucciones"]
offset_left = -503.0
offset_top = 305.0
offset_right = -397.0
offset_bottom = 336.0
text = "DERECHA"
label_settings = SubResource("LabelSettings_3dku2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ralent" type="Label" parent="instrucciones/ColorRect2/Instrucciones"]
offset_left = -398.199
offset_top = 305.209
offset_right = -246.199
offset_bottom = 336.209
text = "REDUCIR VELOCIDAD"
label_settings = SubResource("LabelSettings_3dku2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="dash" type="Label" parent="instrucciones/ColorRect2/Instrucciones"]
offset_left = -196.127
offset_top = 305.209
offset_right = 42.873
offset_bottom = 380.209
text = "DASH IZQUIERDA/DERECHA
(MANTENER PULSADO)
¡OJO! CONSUME MÁS OXÍGENO"
label_settings = SubResource("LabelSettings_3dku2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="espacio" type="Label" parent="instrucciones/ColorRect2/Instrucciones"]
offset_left = -122.646
offset_top = 261.429
offset_right = -48.6461
offset_bottom = 284.429
text = "ESPACIO"
label_settings = SubResource("LabelSettings_3dku2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="instrucciones/ColorRect2/Instrucciones"]
offset_left = 219.827
offset_top = -306.46
offset_right = 497.827
offset_bottom = -123.46
text = "¡LOS MATAMOSCAS TE MATARÁN AL INSTANTE!

CUANTO MÁS GRANDE SEA TU BURBUJA, MÁS PROBABILIDAD DE MORIR"
label_settings = SubResource("LabelSettings_soalm")
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="instrucciones/ColorRect2/Instrucciones"]
offset_left = 520.0
offset_top = -85.0
offset_right = 754.0
offset_bottom = 129.0
text = "¡LOS GASES DEL INSECTICIDA TE QUITARÁN OXÍGENO!

NO MORIRÁS AL INSTANTE, PERO TEN CUIDADO"
label_settings = SubResource("LabelSettings_soalm")
vertical_alignment = 1
autowrap_mode = 2

[node name="Label3" type="Label" parent="instrucciones/ColorRect2/Instrucciones"]
offset_left = 219.827
offset_top = 113.828
offset_right = 739.827
offset_bottom = 234.828
text = "ATRAPAR BURBUJAS DORADAS TE TRANSFORMARÁ Y PROPORCIONARÁ INMORTALIDAD TEMPORALMENTE"
label_settings = SubResource("LabelSettings_soalm")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label4" type="Label" parent="instrucciones/ColorRect2/Instrucciones"]
offset_left = -322.094
offset_top = 137.594
offset_right = -109.094
offset_bottom = 185.594
text = "ESTE ESCARABAJO ERES TÚ"
label_settings = SubResource("LabelSettings_tqqwh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label5" type="Label" parent="instrucciones/ColorRect2/Instrucciones"]
offset_left = -256.486
offset_top = -142.598
offset_right = 26.5137
offset_bottom = -67.5978
text = "ATRAPAR BURBUJAS NORMALES O DORADAS TE SUMARÁN OXÍGENO"
label_settings = SubResource("LabelSettings_tqqwh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label6" type="Label" parent="instrucciones/ColorRect2/Instrucciones"]
offset_left = -43.9166
offset_top = 31.2715
offset_right = 169.083
offset_bottom = 106.271
text = "ESTE ES TU MEDIDOR DE OXÍGENO"
label_settings = SubResource("LabelSettings_tqqwh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label7" type="Label" parent="instrucciones/ColorRect2/Instrucciones"]
offset_left = -717.054
offset_top = -308.962
offset_right = -351.054
offset_bottom = -181.962
text = "ESTA ES TU PUNTUACIÓN

CUANTO MÁS OXÍGENO TENGAS Y A MAYOR VELOCIDAD VAYAS, SE TE APLICARÁN BONIFICACIONES DE PUNTOS"
label_settings = SubResource("LabelSettings_tqqwh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label8" type="Label" parent="instrucciones/ColorRect2/Instrucciones"]
offset_left = -293.227
offset_top = -335.23
offset_right = 256.773
offset_bottom = -236.23
text = "¡¡CONSIGUE OXÍGENO Y ESQUIVA LOS OBSTÁCULOS PARA PODER GANAR LA PUNTUACIÓN MÁXIMA!"
label_settings = SubResource("LabelSettings_av3o4")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="boton_volver" type="TextureButton" parent="instrucciones/ColorRect2/Instrucciones"]
z_index = 7
texture_filter = 1
offset_left = -744.609
offset_top = 325.223
offset_right = -581.609
offset_bottom = 403.223
texture_normal = ExtResource("3_0qp4j")
stretch_mode = 0

[node name="Label" type="Label" parent="instrucciones/ColorRect2/Instrucciones/boton_volver"]
layout_mode = 0
offset_left = 32.804
offset_top = 20.0137
offset_right = 133.804
offset_bottom = 54.0137
text = "VOLVER
"
label_settings = SubResource("LabelSettings_1tbgr")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="main_menu/botonInstrucciones" to="." method="_on_boton_instrucciones_pressed"]
[connection signal="pressed" from="main_menu/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="main_menu/audio_manager/HSlider" to="main_menu/audio_manager" method="_on_h_slider_value_changed"]
[connection signal="pressed" from="instrucciones/ColorRect2/Instrucciones/boton_volver" to="." method="_on_boton_volver_pressed"]
